Name:          bookbuilder
Version:       0.4.0
License:       MIT
License-file:  LICENSE
Category:      Writing
Synopsis:      Build a book directory into a single file
Description:   Turn structured directory of text files into a single file.
               Input formats include anything that pandoc can read.
               Templating allows for separation of content and design.
               Themes can be used to generate different output styles.
               Subsets of the entire book can be built.
               The tool can discover the current location in a book and
               build only that location.
Synopsis:      Compile a book in a directory into a single file
Description:   Tool for building books
Author:        Nate Soares
Maintainer:    nate@natesoares.com
Build-Type:    Simple
Cabal-Version: >=1.6

source-repository head
  type: git
  location: git://github.com/Soares/bookbuilder.git

Executable bookbuilder
  Build-Depends:
    base >= 4 && < 5,
    Dangerous >= 0.2.2,
    Limit >= 1.0,
    bytestring >= 0.9,
    process >= 1.0,
    utf8-string >= 0.3,
    pandoc >= 1.8,
    filepath >= 1.2,
    monad-loops >= 0.3,
    split >= 0.1,
    -- MissingH >= 1.1,
    parsec >= 3.1,
    directory >= 1.1,
    containers >= 0.4,
    mtl >= 2.0,
    rosezipper >= 0.2
  if os(windows)
    Cpp-options: -DWINDOWS
  else
    Build-depends: unix >= 2.4
  Hs-Source-Dirs:   src
  Ghc-Options:      -Wall
  Ghc-Prof-Options: -auto-all
  Main-Is:          bookbuilder.hs
